syntax = "proto3";

package sequencer.sequencer;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sequencer/sequencer/params.proto";
import "sequencer/sequencer/arweave_block_info.proto";
import "sequencer/sequencer/next_arweave_block.proto";

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/warp-contracts/sequencer/sequencer/params";
  
  }
  
  // Queries a LastArweaveBlock by index.
  rpc LastArweaveBlock (QueryGetLastArweaveBlockRequest) returns (QueryGetLastArweaveBlockResponse) {
    option (google.api.http).get = "/warp-contracts/sequencer/sequencer/last_arweave_block";
  
  }
  
  // Queries a list of NextArweaveBlock items.
  rpc NextArweaveBlock    (QueryGetNextArweaveBlockRequest) returns (QueryGetNextArweaveBlockResponse) {
    option (google.api.http).get = "/warp-contracts/sequencer/sequencer/next_arweave_block/{height}";
  
  }
  rpc NextArweaveBlockAll (QueryAllNextArweaveBlockRequest) returns (QueryAllNextArweaveBlockResponse) {
    option (google.api.http).get = "/warp-contracts/sequencer/sequencer/next_arweave_blocks";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLastArweaveBlockRequest {}

message QueryGetLastArweaveBlockResponse {
  ArweaveBlockInfo LastArweaveBlock = 1 [(gogoproto.nullable) = false];
}

message QueryGetNextArweaveBlockRequest {
  string height = 1;
}

message QueryGetNextArweaveBlockResponse {
  NextArweaveBlock nextArweaveBlock = 1 [(gogoproto.nullable) = false];
}

message QueryAllNextArweaveBlockRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllNextArweaveBlockResponse {
  repeated NextArweaveBlock                       nextArweaveBlock = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

